finition structures + coms prgms

--- a/billeterie.css
+++ b/billeterie.css
@@ -1,5 +1,3 @@
-/* ma réalisation */
-
 html, body {
     height: 100%;
     /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
@@ -26,7 +24,7 @@ text-align: center;
 margin-left: 400px;
 }
 
-/*calendrier*/
+                                                             /* Calendrier */
 
 #body{
     width: 100%;
@@ -162,7 +160,7 @@ margin-left: 400px;
     text-align: center;
 }
 
-/*Partie footer */
+                                                            /*Partie footer */
 
 #ma-boite1
 {
@@ -218,7 +216,7 @@ margin-left: 400px;
   opacity: 0.4;
 }
 
-/* partie menu déroulant */
+                                                       /* partie menu déroulant */
 
 nav{
     background-color: #131416;
@@ -258,12 +256,14 @@ nav a{
     /*background: #131416;*/
     /*border-radius: 14px;*/
 }
+
 /*
 nav a:hover{   /*lorsqu'on survole un bouton*//*
 color: rgba(255, 0, 0, 0.884);
 border-bottom: 2px solid red;
 }
 */
+
 .sous2
 {
   font-size: 1.3em;
@@ -307,13 +307,7 @@ a
     font-size: 23px;
 }
 
-/*a:hover
-{
-color: #feba12;
-}*/
-/*
-* ...this controls the actual 3 line menu position, the 'burger'...
-*/
+/* Paramètres de position des span du menu burger */
 #menuToggle
 {
     display: block;
@@ -325,9 +319,9 @@ color: #feba12;
     -webkit-user-select: none;
     user-select: none;
 }
-/*
-* ...this will change the touch/click area size...
-*/
+
+/* Pour changer la taille de la zone de click */
+
 #menuToggle input
 {
     display: block;
@@ -337,17 +331,13 @@ color: #feba12;
     top: -7px;
     left: -5px;
     cursor: pointer;
-
-    opacity: 0; /* hide this */
-    z-index: 2; /* and place it over the hamburger */
-
+    opacity: 0; 
+    z-index: 2; 
     -webkit-touch-callout: none;
 }
 
-/*
-* Just a quick hamburger
-    ...this controls the physical size of the 3 lines in the burger...
-*/
+/* Paramètres des span du menu burger */
+
 #menuToggle span
 {
     display: block;
@@ -355,14 +345,10 @@ color: #feba12;
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-
     background: #ffffff; 
     border-radius: 3px;
-
     z-index: 1;
-
     transform-origin: 4px 0px;
-
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
@@ -378,10 +364,6 @@ color: #feba12;
     transform-origin: 0% 100%;
 }
 
-/* 
-* Transforms all the slices of hamburger
-* into a crossmark.
-*/
 #menuToggle input:checked ~ span
 {
     opacity: 1;
@@ -389,29 +371,19 @@ color: #feba12;
     background: #ffffff;
 }
 
-/*
-* But let's hide the middle one.
-*/
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
-* Oh yeah and the last one should go the other direction
-*/
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
     transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
-* Make this absolute positioned
-* at the top left of the screen
+/* Paramètres de la fenêtre du menu burger */
 
-    ...This is the burgers popup location on your webpage, as well as the size and colour of the popup...
-*/
 #menu
 {
     position: absolute;
@@ -422,14 +394,10 @@ color: #feba12;
     background: #131416;
     border-style:groove;
     border-color: #ffffff;
-
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
-
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -448,9 +416,8 @@ color: #feba12;
   color: rgb(206, 26, 26);
 }
 
-/*
-* And let's slide it in from the left
-*/
+/* Transition menu burger vers la gauche */
+
 #menuToggle input:checked ~ ul
 {
     transform: none;
