--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-/* ma réalisation */
-
 html, body {
   height: 100vh;
   /*background: linear-gradient(rgb(233, 128, 128), rgb(255, 255, 255));*/
@@ -7,13 +5,6 @@ html, body {
   background-size: cover;
   overflow: hidden;
 }
-/*
-button
-{
-  border: 0px;
-  padding: center;
-  margin-left: 20px;
-}*/
 
 #titre
 {
@@ -64,7 +55,7 @@ button
   border-bottom: dashed #df3636 2px;
 }
 
-/*Partie footer */
+                                                               /*Partie footer */
 
 #ma-boite1
 {
@@ -119,7 +110,7 @@ button
   opacity: 0.4;
 }
 
-/* partie animation images */
+                                                         /* partie animation images */
 
 .slider {
     width: 700px;
@@ -189,7 +180,7 @@ button
     }
 }
 
-/* partie menu déroulant */
+                                                       /* partie menu déroulant */
 
 nav{
   background-color: #131416;
@@ -229,12 +220,14 @@ nav a{
   /*background: #131416;*/
   /*border-radius: 14px;*/
 }
+
 /*
 nav a:hover{   /*lorsqu'on survole un bouton*//*
   color: rgba(255, 0, 0, 0.884);
   border-bottom: 2px solid red;
 }
 */
+
 .sous2
 {
   font-size: 1.3em;
@@ -278,13 +271,8 @@ a
   font-size: 23px;
 }
 
-/*a:hover
-{
-  color: #feba12;
-}*/
-/*
-* ...this controls the actual 3 line menu position, the 'burger'...
-*/
+/* Paramètres de position des span du menu burger */
+
 #menuToggle
 {
   display: block;
@@ -296,9 +284,9 @@ a
   -webkit-user-select: none;
   user-select: none;
 }
-/*
-* ...this will change the touch/click area size...
-*/
+
+/* Pour changer la taille de la zone de click */
+
 #menuToggle input
 {
   display: block;
@@ -308,17 +296,13 @@ a
   top: -7px;
   left: -5px;
   cursor: pointer;
-
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-
+  opacity: 0; 
+  z-index: 2; 
   -webkit-touch-callout: none;
 }
 
-/*
-* Just a quick hamburger
-  ...this controls the physical size of the 3 lines in the burger...
-*/
+/* Paramètres des span du menu burger */
+
 #menuToggle span
 {
   display: block;
@@ -326,14 +310,10 @@ a
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-
   background: #ffffff; 
   border-radius: 3px;
-
   z-index: 1;
-
   transform-origin: 4px 0px;
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
             background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
             opacity 0.55s ease;
@@ -349,10 +329,6 @@ a
   transform-origin: 0% 100%;
 }
 
-/* 
-* Transforms all the slices of hamburger
-* into a crossmark.
-*/
 #menuToggle input:checked ~ span
 {
   opacity: 1;
@@ -360,29 +336,19 @@ a
   background: #ffffff;
 }
 
-/*
-* But let's hide the middle one.
-*/
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
-* Oh yeah and the last one should go the other direction
-*/
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
-* Make this absolute positioned
-* at the top left of the screen
+/* Paramètres de la fenêtre du menu burger */
 
-  ...This is the burgers popup location on your webpage, as well as the size and colour of the popup...
-*/
 #menu
 {
   position: absolute;
@@ -393,14 +359,10 @@ a
   background: #131416;
   border-style:groove;
   border-color: #ffffff;
-
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -419,9 +381,8 @@ a
   color: rgb(206, 26, 26);
 }
 
-/*
- * And let's slide it in from the left
- */
+/* Transition menu burger vers la gauche */
+
 #menuToggle input:checked ~ ul
 {
   transform: none;
