--- a/plan_du_site.css
+++ b/plan_du_site.css
@@ -1,5 +1,3 @@
-/* ma réalisation */
-
 html, body {
   /*background: linear-gradient(rgb(219, 219, 219), rgb(219, 219, 219));*/
   /*background-image: linear-gradient(
@@ -77,7 +75,7 @@ body::-webkit-scrollbar {
   opacity: 0.7;
 }
 
-/* plan du site */
+                                                                /* plan du site */
 .sousliste{
   color : black;
   list-style-type : none;
@@ -123,24 +121,7 @@ body::-webkit-scrollbar {
   opacity: 0.7;
 }
 
-/*.sousliste3{
-  color : black;
-  list-style-type : none;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 17px;
-  padding-left: 110px;
-}*/
-
-/*.sousliste3 a{
-  text-decoration: none;
-  color : black;
-  list-style-type : none;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 17px;
-  padding-left: 60px;
-}*/
-
-/*Partie footer */
+                                                             /*Partie footer */
 
 #ma-boite1
 {
@@ -191,7 +172,7 @@ body::-webkit-scrollbar {
   opacity: 0.4;
 }
 
-/* partie menu déroulant */
+                                                       /* partie menu déroulant */
 
 nav{
   background-color: #131416;
@@ -231,12 +212,14 @@ nav a{
   /*background: #131416;*/
   /*border-radius: 14px;*/
 }
+
 /*
 nav a:hover{   /*lorsqu'on survole un bouton*//*
 color: rgba(255, 0, 0, 0.884);
 border-bottom: 2px solid red;
 }
 */
+
 .sous2
 {
   font-size: 1.3em;
@@ -280,13 +263,8 @@ a
   font-size: 23px;
 }
 
-/*a:hover
-{
-color: #feba12;
-}*/
-/*
-* ...this controls the actual 3 line menu position, the 'burger'...
-*/
+/* Paramètres de position des span du menu burger */
+
 #menuToggle
 {
   display: block;
@@ -298,9 +276,9 @@ color: #feba12;
   -webkit-user-select: none;
   user-select: none;
 }
-/*
-* ...this will change the touch/click area size...
-*/
+
+/* Pour changer la taille de la zone de click */
+
 #menuToggle input
 {
   display: block;
@@ -310,17 +288,13 @@ color: #feba12;
   top: -7px;
   left: -5px;
   cursor: pointer;
-
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-
+  opacity: 0; 
+  z-index: 2; 
   -webkit-touch-callout: none;
 }
 
-/*
-* Just a quick hamburger
-  ...this controls the physical size of the 3 lines in the burger...
-*/
+/* Paramètres des span du menu burger */
+
 #menuToggle span
 {
   display: block;
@@ -328,14 +302,10 @@ color: #feba12;
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-
   background: #ffffff; 
   border-radius: 3px;
-
   z-index: 1;
-
   transform-origin: 4px 0px;
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
             background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
             opacity 0.55s ease;
@@ -351,10 +321,6 @@ color: #feba12;
   transform-origin: 0% 100%;
 }
 
-/* 
-* Transforms all the slices of hamburger
-* into a crossmark.
-*/
 #menuToggle input:checked ~ span
 {
   opacity: 1;
@@ -362,29 +328,19 @@ color: #feba12;
   background: #ffffff;
 }
 
-/*
-* But let's hide the middle one.
-*/
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
-* Oh yeah and the last one should go the other direction
-*/
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
-* Make this absolute positioned
-* at the top left of the screen
+/* Paramètres de la fenêtre du menu burger */
 
-  ...This is the burgers popup location on your webpage, as well as the size and colour of the popup...
-*/
 #menu
 {
   position: absolute;
@@ -395,14 +351,10 @@ color: #feba12;
   background: #131416;
   border-style:groove;
   border-color: #ffffff;
-
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -421,80 +373,8 @@ color: #feba12;
   color: rgb(206, 26, 26);
 }
 
+/* Transition menu burger vers la gauche */
 
-/* partie animation images */
-
-.slider {
-    width: 700px;
-    height: 500px;
-    overflow: hidden;
-    margin: 50px auto;
-    position: relative;
-    border: 2px solid white;
-    left: -50px;
-}
-.slides {
-    width: calc(700px * 8);
-    animation: glisse 30s infinite;
-  
-}
-.slide img{
-    float: left;
-    width:700px;
-    height:500px;
-}
-
-@keyframes glisse {
-    0% {
-        transform: translateX(0);
-    }
-    5% {
-        transform: translateX(0);
-    }
-    15% {
-        transform: translateX(-700px);
-    }
-    20% {
-        transform: translateX(-700px);
-    }
-    30% {
-        transform: translateX(-1400px);
-    }
-    35% {
-        transform: translateX(-1400px);
-    }
-    45% {
-        transform: translateX(-2100px);
-    }
-    50% {
-        transform: translateX(-2100px);
-    }
-    60% {
-        transform: translateX(-2800px);
-    }
-    65% {
-        transform: translateX(-2800px);
-    }
-    75% {
-        transform: translateX(-3500px);
-    }
-    80% {
-        transform: translateX(-3500px);
-    }
-    90% {
-        transform: translateX(-4200px);
-    }
-    99% {
-        transform: translateX(-4200px);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-
-/*
- * And let's slide it in from the left
- */
 #menuToggle input:checked ~ ul
 {
   transform: none;
